# Linux-Media-Player

./: .gitignore  README.md
LinuxMediaPlayer/: CMakeLists.txt  CMakePresets.json  Helper.cpp  Helper.h  LinuxMediaPlayer.cpp  LinuxMediaPlayer.h  Manager.h  bundle_deps.py
LinuxMediaPlayer/controller/: AudioProcessor.cpp  AudioProcessor.h  Controller.cpp  Controller.h  SDLController.cpp  SDLController.h
LinuxMediaPlayer/model/: AudioFile.cpp  AudioFile.h  MediaFile.cpp  MediaFile.h  MediaManager.cpp  MediaManager.h  Playlist.cpp  Playlist.h  VideoFile.cpp  VideoFile.h
LinuxMediaPlayer/ui/: ConsoleView.cpp  ConsoleView.h
